# pyspeedtest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/repository_metadata/: gh_repo.yml
docs/: BRANCH_STRATEGY.md  VERSIONING_POLICY.md
docs/lintrules/: markdownlint.md
src/: speedtest.py
tests/: test_helper_func.py  test_shell.py
