[project]
name = "pyspeedtest"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[project.entry-points.console_scripts]
pyspeedtest = "speedtest:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
tool.uv.package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0"
]
